<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#6F0000">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#AA1212"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="1dp"
        android:gravity="center"
        android:text="@string/menu_home"
        android:id="@+id/menu_home_btn" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#AA1212"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="1dp"
        android:gravity="center"
        android:text="@string/menu_theater"
        android:id="@+id/menu_theater_btn" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#AA1212"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="1dp"
        android:gravity="center"
        android:text="@string/menu_book"
        android:id="@+id/menu_book_btn"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#AA1212"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:text="@string/menu_myticket"
        android:id="@+id/menu_myticket_btn"/>

</LinearLayout>
